Various lints and reduce red text in logs